--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,3 +81,16 @@ $darkred: #83242a;
     }
   }
 }
+
+
+.message{
+  width: 400px;
+  background-color: rgb(173, 190, 197);
+  color: black;
+  margin: 20px 0;
+  border-radius: 10px;
+}
+.message-you{
+  margin-left: 100px;
+  background-color: rgb(122, 201, 233);
+}
