--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,15 +82,68 @@ $darkred: #83242a;
   }
 }
 
-
-.message{
-  width: 400px;
-  background-color: rgb(173, 190, 197);
-  color: black;
-  margin: 20px 0;
-  border-radius: 10px;
-}
-.message-you{
-  margin-left: 100px;
-  background-color: rgb(122, 201, 233);
+// Chat
+.containerChat {
+  width: 100vw;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .frame {
+    width: 100%;
+    height: fit-content;
+    max-width: 500px;
+    border: 2px solid grey;
+    max-height: 100vh;
+    form {
+      border-top: 2px solid grey;
+      height: 120px;
+      padding: 5px;
+      textarea {
+        width: 100%;
+        height: 66px;
+        resize: none;
+        padding: 5px;
+      }
+      button {
+        padding: 5px 10px;
+        background-color: $green;
+      }
+    }
+    .chat {
+      display: flex;
+      flex-direction: column;
+      padding: 10px;
+      overflow-y: scroll;
+      max-height: 70vh;
+      span{
+        display: block;
+        width: 100%;
+        text-align: end;
+        font-size: 12px;
+        font-weight: 500;
+      }
+    }
+    .message {
+      width: 90vw;
+      max-width: 400px;
+      background-color: rgb(173, 190, 197);
+      color: black;
+      margin: 10px 0;
+      border-radius: 10px;
+      font-weight: 600;
+      padding: 5px;
+      p {
+        width: 100%;
+      }
+      span{
+        text-align: start;
+      }
+    }
+    .message-you {
+      margin-left: 0px;
+      background-color: rgb(122, 201, 233);
+      align-self: flex-end;
+    }
+  }
 }
