--- a/src/styles.scss
+++ b/src/styles.scss
@@ -115,7 +115,7 @@ $darkred: #83242a;
       flex-direction: column;
       padding: 10px;
       overflow-y: scroll;
-      max-height: 70vh;
+      height: 70vh;
       span{
         display: block;
         width: 100%;
