--- a/src/styles.scss
+++ b/src/styles.scss
@@ -90,6 +90,8 @@ $darkred: #83242a;
   justify-content: center;
   align-items: center;
   .frame {
+    position: relative;
+
     width: 100%;
     height: fit-content;
     max-width: 500px;
@@ -116,7 +118,7 @@ $darkred: #83242a;
       padding: 10px;
       overflow-y: scroll;
       height: 70vh;
-      span{
+      span {
         display: block;
         width: 100%;
         text-align: end;
@@ -136,7 +138,7 @@ $darkred: #83242a;
       p {
         width: 100%;
       }
-      span{
+      span {
         text-align: start;
       }
     }
@@ -145,5 +147,15 @@ $darkred: #83242a;
       background-color: rgb(122, 201, 233);
       align-self: flex-end;
     }
+  }
+  .logout {
+    position: absolute;
+    bottom: 7px;
+    right: -20px;
+    transform: translateX(-50%);
+    padding: 5px;
+    background-color: $red;
+    border-radius: 5px;
+    font-weight: 600;
   }
 }
