--- a/src/styles.scss
+++ b/src/styles.scss
@@ -127,6 +127,7 @@ $darkred: #83242a;
       }
     }
     .message {
+      position: relative;
       width: 90vw;
       max-width: 400px;
       background-color: rgb(173, 190, 197);
@@ -136,10 +137,18 @@ $darkred: #83242a;
       font-weight: 600;
       padding: 5px;
       p {
-        width: 100%;
+        width: 85%;
       }
       span {
         text-align: start;
+      }
+      img {
+        position: absolute;
+        width: 25px;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
       }
     }
     .message-you {
